added home gallery and cloudinary gallery and contact page info and styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,9 @@
 @import './variables.scss';
 @import './global.scss';
 @import './navbar.scss';
+@import './home-gallery.scss';
+@import './gallery-gallery.scss';
+@import './contact.scss';
 @import './media-queries.css';
 
 
