--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -19,6 +19,8 @@
         padding: 12px 20px;
         margin: 8px 0;
         box-sizing: border-box;
+        border-radius: 25px;
+        align-self: center;
       }
 
       input[type=email] {
@@ -26,25 +28,34 @@
         padding: 12px 20px;
         margin: 8px 0;
         box-sizing: border-box;
+        border-radius: 25px;
+        
       }
 
       .form textarea {
-          margin-top: 20px;
-          width: 100%;
-          height: 120px;
-          border-radius: 3px;
-          font-size: 1.5rem;
-          font-family: inherit;
-          color: color;
-          padding: 1.5rem 2 rem;
-          transition: all 0.3s;
+        width: 100%;
+        height: 120px;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border-radius: 25px;
+          // margin-top: 20px;
+          // width: 100%;
+          // height: 100px;
+          // font-size: 1rem;
+          // font-family: inherit;
+          // color: color;
+          // padding: 1.5rem 2rem;
+          // transition: all 0.3s;
+          // border-radius: 25px;
+          
       }
 
     img {
         height: 500px;
         width: 1000px;
         border-radius: 50%;
-        margin: 30px;
+        margin: 20px;
       }
  
 }
