--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -5,3 +5,15 @@
         height: 100%
     }
 }
+
+@media (max-width: 480px) {
+    body {
+        background-image: url(/assets/images/cool-background.png);
+    }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+    body {
+        background-image: url(/assets/images/cool-background.png);
+    }
+}
