--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -27,3 +27,11 @@
         
     }
 }
+
+@media (max-width:600px) {
+    .contact-photos {
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+    }
+}
