--- a/src/style/media-queries.css
+++ b/src/style/media-queries.css
@@ -1,37 +1,25 @@
-@media (max-width: 600px) {
+@media (max-width: 420px) {
+
+    
+   
     .nav-wrapper {
         flex-direction: column;
         align-items: center;
-        height: 100%;
-    }
-}
-
-@media (max-width: 480px) {
-    body {
-        background-image: url(/assets/images/cool-background.png);
-        height: 100%;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-    body {
-        background-image: url(/assets/images/cool-background.png);
-        height: 100%;
-    }
-}
-
-@media (max-width:300px) {
-    .contact-img {
-        width: auto;
-        height: auto;
+        height:100%;
         
     }
-}
 
-@media (max-width:600px) {
+
     .contact-photos {
         flex-direction: column;
         align-items: center;
-        height: 100%;
+        
+        
     }
+
+    .contact-photos > .img {
+        flex-direction: column;
+        /* align-items: center; */
+    }
+
 }
